--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "proyecto_experiencias",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@gitlab.com/Jose_Hernan/proyecto_experiencias.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://gitlab.com/Jose_Hernan/proyecto_experiencias/issues"
-  },
-  "homepage": "https://gitlab.com/Jose_Hernan/proyecto_experiencias#readme",
-  "description": "",
-  "devDependencies": {
-    "eslint": "^8.23.1",
-    "nodemon": "^2.0.19",
-    "prettier": "^2.7.1"
-  },
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0",
-    "mysql": "^2.18.1"
-  }
+    "name": "proyecto_experiencias",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "dev": "nodemon server.js",
+        "db": "node db/initDB.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+ssh://git@gitlab.com/Jose_Hernan/proyecto_experiencias.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://gitlab.com/Jose_Hernan/proyecto_experiencias/issues"
+    },
+    "homepage": "https://gitlab.com/Jose_Hernan/proyecto_experiencias#readme",
+    "description": "",
+    "devDependencies": {
+        "eslint": "^8.23.1",
+        "nodemon": "^2.0.19",
+        "prettier": "^2.7.1"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "dotenv": "^16.0.2",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^8.5.1",
+        "morgan": "^1.10.0",
+        "mysql": "^2.18.1"
+    }
 }
