--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,11 +5,11 @@
         "node": true
     },
     "extends": "eslint:recommended",
-    "overrides": [
-    ],
+    "overrides": [],
     "parserOptions": {
         "ecmaVersion": "latest"
     },
     "rules": {
+        "no-unused-vars": "off"
     }
 }
