--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "bcrypt": "^5.0.1",
         "dotenv": "^16.0.2",
         "express": "^4.18.1",
+        "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
-        "mysql": "^2.18.1"
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3"
     }
 }
