--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
         "jsonwebtoken": "^8.5.1",
         "morgan": "^1.10.0",
         "mysql": "^2.18.1",
-        "mysql2": "^2.3.3"
+        "mysql2": "^2.3.3",
+        "path": "^0.12.7",
+        "sharp": "^0.31.0",
+        "unlink": "^0.0.2",
+        "uuid": "^9.0.0"
     }
 }
